--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -22,8 +23,7 @@
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
     "react-redux": "^8.0.7",
-    "react-router-dom": "^6.12.0",
-    "socket.io-client": "^4.6.2"
+    "react-router-dom": "^6.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
